namespaces/gke-cluster-data/opa/opa.yml
---
# Source: opa/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: opa-fgd-apa
  labels:
    app: opa-fgd-apa
    chart: "opa-1.14.4"
    release: "opa-fgd-apa"
    heritage: "Helm"
spec:
  selector:
    app: opa-fgd-apa
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
---
# Source: opa/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa-fgd-apa
  labels:
    app: opa-fgd-apa
    chart: "opa-1.14.4"
    release: "opa-fgd-apa"
    heritage: "Helm"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa-fgd-apa
  template:
    metadata:
      annotations:
        checksum/certs: 5e13a3d361ef218ed30922b9175d1d4163de7cbd2423b44ae2d7a2936e3fc943
        checksum/config: b1ea09588bdfd15d40102d74327588812456c09a61be83482d29dee674e54020
      labels:
        app: opa-fgd-apa
      name: opa-fgd-apa
    spec:
      containers:
        - name: opa
          ports:
          - name: https
            containerPort: 443
          image: openpolicyagent/opa:0.15.1
          imagePullPolicy: IfNotPresent
          resources:
            {}
          args:
            - "run"
            - "--server"
            - "--config-file=/config/config.yaml"
            - "--tls-cert-file=/certs/tls.crt"
            - "--tls-private-key-file=/certs/tls.key"
            - "--addr=0.0.0.0:443"
            - "--log-level=info"
            - "--log-format=text"
            - "--authentication=token"
            - "--authorization=basic"
            - "--ignore=.*"
            - "--addr=http://127.0.0.1:8181"
            - "/bootstrap"
          volumeMounts:
            - name: certs
              readOnly: true
              mountPath: /certs
            - name: config
              readOnly: true
              mountPath: /config
            - name: bootstrap
              readOnly: true
              mountPath: /bootstrap
          readinessProbe:
            httpGet:
              path: /health
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 3
            periodSeconds: 5
        - name: mgmt
          image: openpolicyagent/kube-mgmt:0.10
          imagePullPolicy: IfNotPresent
          resources:
            {}
          args:
            - --opa-auth-token-file=/bootstrap/mgmt-token
            - --opa-url=http://127.0.0.1:8181/v1
            - --replicate-path=kubernetes
            - --enable-data=false
            - --enable-policies=false
          volumeMounts:
            - name: bootstrap
              readOnly: true
              mountPath: /bootstrap
      serviceAccountName: opa-fgd-apa
      volumes:
        - name: certs
          secret:
            secretName: opa-fgd-apa-cert
        - name: config
          secret:
            secretName: opa-fgd-apa-config
        - name: bootstrap
          emptyDir: {}
      affinity:
        {}
      nodeSelector:
        {}
      tolerations:
        []
---
# Source: opa/templates/webhookconfiguration.yaml
kind: ValidatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1beta1
metadata:
  name: opa-fgd-apa
  annotations:
  labels:
    app: opa-fgd-apa
    chart: "opa-1.14.4"
    release: "opa-fgd-apa"
    heritage: "Helm"
webhooks:
  - name: webhook.openpolicyagent.org
    namespaceSelector:
      matchExpressions:
      - key: openpolicyagent.org/webhook
        operator: NotIn
        values:
        - ignore

    failurePolicy: Ignore
    rules:
      - apiGroups:
        - '*'
        apiVersions:
        - '*'
        operations:
        - '*'
        resources:
        - '*'
    clientConfig:


      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURBekNDQWV1Z0F3SUJBZ0lSQUtlQ3FpYngwV3BGMUZKRnNrVVlXbTR3RFFZSktvWklodmNOQVFFTEJRQXcKR3pFWk1CY0dBMVVFQXhNUWIzQmhMV0ZrYldsemMybHZiaTFqWVRBZUZ3MHlNREE1TWpFeE5URXhNekJhRncwegpNREE1TVRreE5URXhNekJhTUJzeEdUQVhCZ05WQkFNVEVHOXdZUzFoWkcxcGMzTnBiMjR0WTJFd2dnRWlNQTBHCkNTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDMnBYYjB6OHhpaEZYcG0zQWd2amFuczFOTDg4WXcKYjUzOVN2N0RuUFY1bmNncGpzanNLYlNVTUliL2poYnRoam83WU50eDU2bFdvdndraldiaGJFbUJXQi9mN0wxUQpiakFjZFlzZ3Ri [...]


      service:
        name: opa-fgd-apa
        namespace: default
    sideEffects: Unknown
